	* pausing the session now also pauses checking torrents
	* moved alert queue size limit into session_settings
	* added support for DHT rss feeds (storing only)
	* added support for RSS feeds
	* fixed up some edge cases in DHT routing table and improved unit test of it
	* added error category and error codes for HTTP errors
	* made the DHT implementation slightly more robust against routing table poisoning and node ID spoofing
	* support chunked encoding in http downloads (http_connection)
	* support adding torrents by url to the .torrent file
	* support CDATA tags in xml parser
	* use a python python dictionary for settings instead of session_settings object (in python bindings)
	* optimized metadata transfer (magnet link) startup time (shaved off about 1 second)
	* optimized swarm startup time (shaved off about 1 second)
	* support DHT name lookup
	* optimized memory usage of torrent_info and file_storage, forcing some API changes
	  around file_storage and file_entry
	* support trackerid tracker extension
	* graceful peer disconnect mode which finishes transactions before disconnecting peers
	* support chunked encoding for web seeds
	* uTP protocol support
	* resistance towards certain flood attacks
	* support chunked encoding for web seeds (only for BEP 19, web seeds)
	* optimized session startup time
	* support SSL for web seeds, through all proxies
	* support extending web seeds with custom authorization and extra headers
	* settings that are not changed from the default values are not saved
	  in the session state
	* made seeding choking algorithm configurable
	* deprecated setters for max connections, max half-open, upload and download
	  rates and unchoke slots. These are now set through session_settings
	* added functions to query an individual peer's upload and download limit
	* full support for BEP 21 (event=paused)
	* added share-mode feature for improving share ratios
	* merged all proxy settings into a single one